2011-01-25  Julien Danjou  <julien@danjou.info>

	* mm-view.el (mm-display-shell-script-inline): Fix typo in docstring.
	(mm-display-javascript-inline): New function.

	* mm-decode.el (mm-inline-media-tests): Add application/javascript
	viewing function.

2011-01-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-expand-newlines): Fix variable name.

2011-01-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-expand-newlines): Make nested boxes work.

2011-01-24  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-expand-newlines): Proof of concept implemantation of boxy
	backgrounds.
	(shr-expand-newlines): Switch to using overlays to enable kill'n'yank
	in a more sensible manner.

2011-01-24  Teodor Zlatanov  <tzz@lifelogs.com>

	* mml-smime.el (mml-smime-use): Make it a defcustom and default to 'epg
	if EPG is loaded.

2011-01-24  Julien Danjou  <julien@danjou.info>

	* shr.el: Use defface to create shr-tag-h[1-6] faces to fontify h[1-6]
	tags.

2011-01-24  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-read-summary-keys): Don't call disabled
	commands.

	* gnus-gravatar.el (gnus-gravatar-insert): Don't move point around
	in the article buffer.
	(gnus-gravatar-insert): Use blank space from the current buffer to
	avoid breaking text properties.  This makes X-Sent updating work again.

	* gravatar.el (gravatar-retrieve): Be silent when retrieving.

2011-01-23  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-image-fetched): Kill the buffer anyway, and
	fix the bug in url-http.el instead.

	* shr.el (shr-image-fetched): Ditto.

	* shr.el (shr-image-fetched): Avoid having point move in the article
	buffer.

	* gnus-html.el (gnus-html-image-fetched): Don't kill the temporary
	buffer after being called.  It's apparently being killed by url.el, and
	killing it made point move to end-of-buffer in a random buffer.

	* shr.el (shr-image-fetched): Ditto.

2011-01-23  Julien Danjou  <julien@danjou.info>
